--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,113 @@
-:root{}
+@import url('https://fonts.googleapis.com/css2?family=Oi&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+* {
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 1px;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    outline: none;
+    border: none;
+    font-size: 1em;
+}
+
+
+:root {
+    --gutter-s: .5em;
+    --gutter-xs: .3em;
+    --gutter-m: 1em;
+    --gutter-l: 1.5em;
+
+
+    --light-gray: #f3f3f3;
+    --blue: #0e87cc;
+
+    --rounded: 4px;
+    --shadow: 0 1px 2px rgba(0, 0, 0, 0.07),
+        0 2px 4px rgba(0, 0, 0, 0.07),
+        0 4px 8px rgba(0, 0, 0, 0.07),
+        0 8px 16px rgba(0, 0, 0, 0.07),
+        0 16px 32px rgba(0, 0, 0, 0.07),
+        0 32px 64px rgba(0, 0, 0, 0.07);
+}
+
+body {
+    overflow: auto;
+    position: fixed;
+    background: rgb(14, 135, 204);
+    background: linear-gradient(194deg, rgba(14, 135, 204, 1) 0%, rgba(0, 6, 8, 1) 56%, rgba(0, 6, 8, 1) 84%);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+}
+
+main {
+    width: 100vw;
+    height: 100vh;
+    background-color: red;
+}
+
+
+h1 {
+    font-size: 4em;
+    color: rgb(221, 221, 221);
+    font-weight: 600;
+    border-bottom: 15px dotted rgb(221, 221, 221);
+    width: fit-content;
+    padding: var(--gutter-m);
+    margin-left: var(--gutter-m);
+    padding-bottom: 0;
+    padding-left: 0;
+}
+
+button.basic {
+    position: relative;
+    background-color: transparent;
+    width: fit-content;
+    height: fit-content;
+    padding: var(--gutter-s);
+    border-radius: var(--rounded);
+    font-weight: 500;
+}
+
+button.basic::after {
+    transition: all 200ms ease;
+    background-color: var(--light-gray);
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    z-index: -1;
+    border-radius: inherit;
+}
+
+button.basic:hover::after {
+    opacity: 1;
+}
+
+.bubble {
+    border-radius: 50%;
+    border: 3px dotted rgb(153, 243, 255);
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: scale 500ms linear;
+    background-color: rgba(255, 255, 255, 0.085)
+}
+
+.header {
+    top: 50%;
+    padding: var(--gutter-m);
+}
