--- a/styles.css
+++ b/styles.css
@@ -3,25 +3,33 @@
 * {
     font-family: 'Roboto', sans-serif;
     letter-spacing: 1px;
-    box-sizing: border-box;
+    box-sizing: border-box !important;
     margin: 0;
     padding: 0;
     outline: none;
     border: none;
     font-size: 1em;
+    user-select: none;
+    -webkit-user-select: none;
+    background-color: transparent;
+    user-select: none;
 }
 
+*:hover {
+    cursor: default !important;
+    user-select: none;
+    -webkit-user-select: none;
+}
 
 :root {
     --gutter-s: .5em;
     --gutter-xs: .3em;
     --gutter-m: 1em;
     --gutter-l: 1.5em;
-
-
+/*  */
     --light-gray: #f3f3f3;
     --blue: #0e87cc;
-
+/*  */
     --rounded: 4px;
     --shadow: 0 1px 2px rgba(0, 0, 0, 0.07),
         0 2px 4px rgba(0, 0, 0, 0.07),
@@ -32,39 +40,100 @@
 }
 
 body {
+    height: fit-content;
+    max-width: 100vw;
     overflow: auto;
-    position: fixed;
+    background-color: black;
+}
+
+ul {
+    list-style: none;
+}
+
+.header {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
     background: rgb(14, 135, 204);
-    background: linear-gradient(194deg, rgba(14, 135, 204, 1) 0%, rgba(0, 6, 8, 1) 56%, rgba(0, 6, 8, 1) 84%);
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+    background: linear-gradient(183deg, rgb(0, 20, 32) 11%, rgba(0, 6, 8, 1) 74%);
+    text-align: left;
 }
 
-header {
-    display: flex;
-    flex-direction: column;
+.main {
     width: 100vw;
     height: 100vh;
+    position: fixed;
+    scroll-behavior: smooth;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
-main {
+#content {
+    height: fit-content;
+    width: 100%;
+    top: 100vh;
+    position: absolute;
+    background-color: black;
+    padding: var(--gutter-m);
+}
+
+#events {
+    background-color: transparent;
+    height: 200vh;
     width: 100vw;
-    height: 100vh;
-    background-color: red;
+    position: absolute;
 }
 
+@keyframes floating {
+    from {
+        -ms-transform: translateX(0deg);
+        -moz-transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    to {
+        -ms-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
 
 h1 {
-    font-size: 4em;
+    font-size: 6em;
     color: rgb(221, 221, 221);
-    font-weight: 600;
-    border-bottom: 15px dotted rgb(221, 221, 221);
+    font-weight: 700;
     width: fit-content;
     padding: var(--gutter-m);
-    margin-left: var(--gutter-m);
-    padding-bottom: 0;
     padding-left: 0;
+    padding-bottom: 0;
+    height: fit-content;
+    background: rgb(133, 12, 255);
+    background: linear-gradient(225deg, rgb(227, 199, 255) 0%, rgb(67, 50, 255) 100%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-color: red;
+    margin-left: var(--gutter-s);
+}
+
+h2 {
+    font-size: 2em;
+    color: rgb(221, 221, 221);
+    font-weight: 700;
+    width: fit-content;
+    padding: var(--gutter-m);
+    padding-bottom: 0;
+    margin-left: var(--gutter-s);
+    height: fit-content;
+    background: rgb(255, 255, 255);
+    background: linear-gradient(225deg, rgb(206, 214, 255) 0%, rgb(218, 216, 255) 100%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    width: fit-content;
 }
 
 button.basic {
@@ -110,4 +179,125 @@ button.basic:hover::after {
 .header {
     top: 50%;
     padding: var(--gutter-m);
+    text-align: left;
+}
+
+div.nav-placeholder {
+    background-color: transparent;
+    width: fit-content;
+    padding: var(--gutter-l);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+ul.nav-container {
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    gap: var(--gutter-m);
+    padding: var(--gutter-m);
+    padding-bottom: 60px;
+}
+
+ul.nav-container li {
+    padding: var(--gutter-s);
+    border-radius: 20px;
+    position: relative;
+    font-weight: 700;
+    font-size: 1.8em;
+    color: rgb(221, 221, 221);
+    letter-spacing: 2px !important;
+    z-index: 2;
+    border-radius: var(--rounded);
+}
+
+ul.nav-container li::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgb(255, 255, 255);
+    z-index: -1;
+    opacity: 0;
+    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    box-shadow: var(--shadow);
+    border-radius: inherit;
+}
+
+ul.nav-container li:hover::after {
+    opacity: 1;
+    transform: scaleX(1.05) scaleY(1.05);
+}
+
+ul.nav-container li:hover {
+    color: black;
+}
+
+.event-container {
+    width: 500px;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    margin: var(--gutter-m);
+    padding: var(--gutter-s);
+    gap: var(--gutter-s);
+}
+
+.event:hover .circle {
+    opacity: 1;
+    transform: translateX(-80%);
+}
+
+.event {
+    height: 50px;
+    width: 500px;
+    border-radius: var(--rounded);
+    display: flex;
+    font-size: 1.7em;
+    color: #f3f3f3;
+    align-items: center;
+    gap: var(--gutter-s);
+    opacity: 0.8;
+    justify-content: space-between;
+    text-align: left;
+    padding: var(--gutter-s);
+    -webkit-transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+span.circle {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: white;
+    opacity: 0;
+    transform: translateX(80%);
+    -webkit-transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.event::after {
+    height: 50px;
+    width: 100%;
+    border-radius: var(--rounded);
+}
+
+.event:hover {
+    cursor: default !important;
+    opacity: 1;
+    transform: translateX(5%);
+}
+
+.name {
+    width: 80%;
+}
+
+.time {
+    font-size: .7em;
 }
