--- a/registration/styles_regristration.css
+++ b/registration/styles_regristration.css
@@ -1,85 +1,96 @@
-body {
-
-    background: #91a716;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    flex-direction: column;
-
-}
+@import url('https://fonts.googleapis.com/css2?family=Oi&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 *{
-    font-family: cursive;
-    box-sizing: padding-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
-
-form {
-    width: 1000px;
-    border: 3px solid rgb(177, 142, 142);
-    padding: 20px;
-    background: rgb(85, 54, 54);
-    border-radius: 20px;
+body{
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #000000;
 }
-h2 {
-    text-align: center;
-    margin-bottom: 40px;
+.wrapper{
+  position: relative;
+  max-width: 430px;
+  width: 100%;
+  background: #fff;
+  padding: 34px;
+  border-radius: 6px;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
 }
-
-input {
-    display: block;
-    border: 2px solid #ccc;
-    width: 95%;
-    padding: 10px;
-    margin: 10px auto;
-    border-radius: 5px;
+.wrapper h2{
+  position: relative;
+  font-size: 22px;
+  font-weight: 600;
+  color: #333;
 }
-
-label {
-    color: #888;
-    font-size: 18px;
-    padding: 10px;
+.wrapper h2::before{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  width: 28px;
+  border-radius: 12px;
+  background: #4070f4;
 }
-
-button {
-    float: right;
-    background: rgb(35, 174, 202);
-    padding: 10px 15px;
-    color: #fff;
-    border-radius: 5px;
-    margin-right: 10px;
-    border: none;
+.wrapper form{
+  margin-top: 30px;
 }
-
-button:hover{
-    opacity: .10;
+.wrapper form .input-box{
+  height: 52px;
+  margin: 18px 0;
 }
-
-.error {
-   background: #F2DEDE;
-   color: #0c0101;
-   padding: 10px;
-   width: 95%;
-   border-radius: 5px;
-   margin: 20px auto;
+form .input-box input{
+  height: 100%;
+  width: 100%;
+  outline: none;
+  padding: 0 15px;
+  font-size: 17px;
+  font-weight: 400;
+  color: #333;
+  border: 1.5px solid #C7BEBE;
+  border-bottom-width: 2.5px;
+  border-radius: 6px;
+  transition: all 0.3s ease;
 }
-
-h1 {
-    text-align: center;
-    color: rgb(134, 3, 3);
+.input-box input:focus,
+.input-box input:valid{
+  border-color: #4070f4;
 }
-
-a {
-    float: right;
-    background: rgb(183, 225, 233);
-    padding: 10px 15px;
-    color: #fff;
-    border-radius: 10px;
-    margin-right: 10px;
-    border: none;
-    text-decoration: none;
+form .policy{
+  display: flex;
+  align-items: center;
 }
-
-a:hover{
-    opacity: .7;
+form h3{
+  color: #707070;
+  font-size: 14px;
+  font-weight: 500;
+  margin-left: 10px;
+}
+.input-box.button input{
+  color: #fff;
+  letter-spacing: 1px;
+  border: none;
+  background: #4070f4;
+  cursor: pointer;
+}
+.input-box.button input:hover{
+  background: #0e4bf1;
+}
+form .text h3{
+ color: #333;
+ width: 100%;
+ text-align: center;
+}
+form .text h3 a{
+  color: #4070f4;
+  text-decoration: none;
+}
+form .text h3 a:hover{
+  text-decoration: underline;
 }
