--- a/styles.css
+++ b/styles.css
@@ -79,9 +79,9 @@ ul {
     height: fit-content;
     width: 100%;
     top: 100vh;
-    position: absolute;
-    background-color: black;
+    background-color: rgb(0, 80, 254);
     padding: var(--gutter-m);
+    box-sizing: border-box;
 }
 
 #events {
@@ -89,7 +89,6 @@ ul {
     height: 200vh;
     width: 100vw;
     position: absolute;
-    
 }
 
 @keyframes floating {
