--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ ul {
 
 #events {
     background-color: transparent;
-    height: 200vh;
+    height: fit-content;
     width: 100vw;
     position: absolute;
 }
