--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
 *:hover {
     user-select: none;
     -webkit-user-select: none;
-} 
+}
 
 *:active {
     user-select: none;
@@ -82,13 +82,15 @@ ul {
     background-color: rgb(0, 80, 254);
     padding: var(--gutter-m);
     box-sizing: border-box;
+    gap: var(--gutter-m);
+    display: flex;
+    flex-direction: column;
 }
 
 #events {
     background-color: transparent;
     height: fit-content;
-    width: 100vw;
-    position: absolute;
+    background-color: red;
 }
 
 @keyframes floating {
@@ -338,7 +340,6 @@ span.circle {
     opacity: 1;
     border: none;
     cursor: pointer !important;
-
 }
 
 .link {
@@ -350,4 +351,26 @@ span.circle {
 .link:hover {
     cursor: pointer !important;
     opacity: 1;
+}
+
+#targets {
+    background-color: rgb(217, 0, 255);
+    height: fit-content;
+    width: 100%;
+    overflow-x: scroll;
+    display: flex;
+    flex-direction: column;
+    gap: var(--gutter-m);
+}
+
+.tile-container {
+    display: flex;
+    gap: var(--gutter-l);
+    padding: var(--gutter-m);
+}
+
+.tile {
+    background-color: rgb(255, 255, 255);
+    width: 400px;
+    height: 400px;
 }
