--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,6 @@ button.basic:hover::after {
     position: absolute;
     transform: translate(-50%, -50%);
     opacity: 0;
-    transition: scale 500ms linear;
     background-color: rgba(255, 255, 255, 0.085)
 }
 
@@ -354,10 +353,8 @@ span.circle {
 }
 
 #targets {
-    background-color: rgb(217, 0, 255);
+    background-color: rgb(41, 41, 41);
     height: fit-content;
-    width: 100%;
-    overflow-x: scroll;
     display: flex;
     flex-direction: column;
     gap: var(--gutter-m);
@@ -367,10 +364,41 @@ span.circle {
     display: flex;
     gap: var(--gutter-l);
     padding: var(--gutter-m);
+    width: 100%;
+    overflow: scroll;
+
 }
 
 .tile {
     background-color: rgb(255, 255, 255);
     width: 400px;
+    min-width: 400px;
     height: 400px;
+    border-radius: var(--rounded);
+    box-shadow: var(--shadow);
+    position: relative;
+}
+
+.tile-overlap {
+    opacity: 1;
+    background-color: rgb(25, 0, 255);
+    width: 100%;
+    height: 50px;
+    opacity: 0;
+    border-radius: inherit;
+    transition: all 300ms ease;
+    transform: translate(-5);
+}
+
+.tile:hover .tile-overlap {
+    opacity: 1;
+    animation-name: spin;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes spin{
+    0% {transform:rotateZ(0deg);}
+    50% {transform:rotateZ(360deg);border-radius:60%;}
+    100%{transform:rotateZ(720deg);}
 }
