--- a/styles.css
+++ b/styles.css
@@ -402,3 +402,9 @@ span.circle {
     50% {transform:rotateZ(360deg);border-radius:60%;}
     100%{transform:rotateZ(720deg);}
 }
+
+#canvas{
+    background-color: rgb(255, 255, 255);
+    width: 400px;   
+    height: 400px;
+}
