--- a/styles.css
+++ b/styles.css
@@ -60,10 +60,10 @@ ul {
     width: 100vw;
     height: 100vh;
     display: flex;
-    justify-content: space-between;
     background: rgb(14, 135, 204);
     background: linear-gradient(183deg, rgb(0, 20, 32) 11%, rgba(0, 6, 8, 1) 74%);
     text-align: left;
+    z-index: 3;
 }
 
 .main {
@@ -79,7 +79,6 @@ ul {
     height: fit-content;
     width: 100%;
     top: 100vh;
-    background-color: rgb(0, 80, 254);
     padding: var(--gutter-m);
     box-sizing: border-box;
     gap: var(--gutter-m);
@@ -90,7 +89,6 @@ ul {
 #events {
     background-color: transparent;
     height: fit-content;
-    background-color: red;
 }
 
 @keyframes floating {
@@ -124,10 +122,10 @@ h1 {
     background: linear-gradient(225deg, rgb(227, 199, 255) 0%, rgb(67, 50, 255) 100%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
-    background-color: red;
     margin-left: var(--gutter-s);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    z-index: 1;
 }
 
 h2 {
@@ -146,6 +144,7 @@ h2 {
     width: fit-content;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    z-index: 1;
 }
 
 button.basic {
@@ -191,6 +190,7 @@ button.basic:hover::after {
     top: 50%;
     padding: var(--gutter-m);
     text-align: left;
+
 }
 
 div.nav-placeholder {
@@ -200,8 +200,8 @@ div.nav-placeholder {
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    align-items: flex-start;
+    gap: var(--gutter-m);
 }
 
 ul.nav-container {
@@ -209,7 +209,6 @@ ul.nav-container {
     display: flex;
     flex-direction: column;
     gap: var(--gutter-m);
-    padding: var(--gutter-m);
     padding-bottom: 60px;
 }
 
@@ -288,9 +287,10 @@ span.circle {
     border-radius: 50%;
     background-color: white;
     opacity: 0;
-    transform: translateX(80%);
     -webkit-transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
     transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transform: translateX(80%);
+
 }
 
 .event::after {
@@ -353,7 +353,6 @@ span.circle {
 }
 
 #targets {
-    background-color: rgb(41, 41, 41);
     height: fit-content;
     display: flex;
     flex-direction: column;
@@ -381,7 +380,6 @@ span.circle {
 
 .tile-overlap {
     opacity: 1;
-    background-color: rgb(25, 0, 255);
     width: 100%;
     height: 50px;
     opacity: 0;
@@ -397,14 +395,107 @@ span.circle {
     animation-iteration-count: infinite;
 }
 
-@keyframes spin{
-    0% {transform:rotateZ(0deg);}
-    50% {transform:rotateZ(360deg);border-radius:60%;}
-    100%{transform:rotateZ(720deg);}
+@keyframes spin {
+    0% {
+        transform: rotateZ(0deg);
+    }
+
+    50% {
+        transform: rotateZ(360deg);
+        border-radius: 60%;
+    }
+
+    100% {
+        transform: rotateZ(720deg);
+    }
 }
 
-#canvas{
+#canvas {
     background-color: rgb(255, 255, 255);
-    width: 400px;   
+    width: 400px;
     height: 400px;
+}
+
+#bubble-layer {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 0;
+}
+
+.pop-up-container {
+    width: 100%;
+    height: fit-content;
+    position: fixed;
+    z-index: 6;
+    left: 0px;
+    bottom: 0px;
+    transform: translateY(100%);
+    -webkit-transition: transform 0.1s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: transform 0.1s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+    padding: var(--gutter-l);
+    border-bottom: 0px;
+    background-color: rgb(5, 5, 5);
+    box-shadow: var(--shadow);
+    display: flex;
+    border-top: 1px solid rgb(195, 195, 195);
+}
+
+.pop-up-container h1{
+    color: white;
+}
+
+#map {
+    width: 300px;
+    height: 200px;
+    position: relative;
+}
+
+button.close-button {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: var(--gutter-l);
+    right: var(--gutter-l);
+    padding: var(--gutter-s);
+    border-radius: var(--rounded);
+}
+
+/* button.close-button::after {
+    background-color: rgb(230, 230, 230);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    content: "";
+    opacity: 0;
+    border-radius: inherit;
+    z-index: -1;
+    transition: all 300ms ease;
+} */
+
+/* button.close-button:hover::after {
+    opacity: 1;
+} */
+
+button.close-button:hover span.cross-line:nth-child(2) {
+    transform: rotate(45deg) scale(1.2) !important;
+}
+
+button.close-button:hover span.cross-line:nth-child(1) {
+    transform: rotate(-45deg) scale(1.2) !important;
+}
+
+span.cross-line {
+    width: 30px;
+    height: 1px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 50vmax;
+    left: 10px;
+    position: absolute;
+    -webkit-transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
