--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Oi&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 @import url('https://css.gg/user.css');
+@import url('https://css.gg/add.css');
 
 * {
     font-family: 'Roboto', sans-serif;
@@ -28,8 +29,8 @@
 }
 
 :root {
-    --gutter-s: .5em;
     --gutter-xs: .3em;
+    --gutter-s: .5em;
     --gutter-m: 1em;
     --gutter-l: 1.5em;
     /*  */
@@ -44,6 +45,7 @@
         0 16px 32px rgba(0, 0, 0, 0.07),
         0 32px 64px rgba(0, 0, 0, 0.07);
     --transition: transform 0.1s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+    --transition-slow: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
 
 }
 
@@ -56,6 +58,11 @@ body {
 
 ul {
     list-style: none;
+}
+
+a {
+    all: unset;
+    color: rgb(183, 183, 183);
 }
 
 .header {
@@ -80,36 +87,16 @@ ul {
 #content {
     height: fit-content;
     width: 100%;
-    top: 100vh;
     padding: var(--gutter-m);
-    box-sizing: border-box;
-    gap: var(--gutter-m);
     display: flex;
     flex-direction: column;
+    gap: var(--gutter-m);
     background-color: rgb(0, 0, 0);
 }
 
 #events {
     background-color: transparent;
     height: fit-content;
-}
-
-@keyframes floating {
-    from {
-        -ms-transform: translateX(0deg);
-        -moz-transform: rotate(0deg);
-        -webkit-transform: rotate(0deg);
-        -o-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-
-    to {
-        -ms-transform: rotate(360deg);
-        -moz-transform: rotate(360deg);
-        -webkit-transform: rotate(360deg);
-        -o-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
 }
 
 h1 {
@@ -140,14 +127,20 @@ h2 {
     padding-bottom: 0;
     margin-left: var(--gutter-s);
     height: fit-content;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(225deg, rgb(206, 214, 255) 0%, rgb(218, 216, 255) 100%);
+    background: rgb(220, 220, 220);
     background-clip: text;
     -webkit-text-fill-color: transparent;
     width: fit-content;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     z-index: 1;
+}
+
+h3 {
+    color: white;
+    font-size: 1.4em;
+    font-weight: 500;
+    letter-spacing: 1px;
 }
 
 button.basic {
@@ -220,7 +213,7 @@ ul.nav-container li {
     border-radius: 20px;
     position: relative;
     font-weight: 700;
-    font-size: 1.8em;
+    font-size: 1.5em;
     color: rgb(221, 221, 221);
     letter-spacing: 2px !important;
     z-index: 2;
@@ -237,8 +230,8 @@ ul.nav-container li::after {
     background-color: rgb(255, 255, 255);
     z-index: -1;
     opacity: 0;
-    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    -webkit-transition: var(--transition-slow);
+    transition: var(--transition-slow);
     box-shadow: var(--shadow);
     border-radius: inherit;
 }
@@ -253,35 +246,43 @@ ul.nav-container li:hover {
 }
 
 .event-container {
-    width: 500px;
+    width: fit-content;
     height: fit-content;
     display: flex;
     flex-direction: column;
-    margin: var(--gutter-m);
+    margin: var(--gutter-s);
     padding: var(--gutter-s);
     gap: var(--gutter-s);
 }
 
-.event:hover .circle {
-    opacity: 1;
-    transform: translateX(-80%);
-}
 
 .event {
     height: 50px;
     width: 500px;
     border-radius: var(--rounded);
-    display: flex;
     font-size: 1.7em;
     color: #f3f3f3;
-    align-items: center;
     gap: var(--gutter-s);
     opacity: 0.8;
-    justify-content: space-between;
-    text-align: left;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
     padding: var(--gutter-s);
-    -webkit-transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
-    transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+
+    -webkit-transition: var(--transition-slow);
+    transition: var(--transition-slow);
+}
+
+.event:hover {
+    opacity: 1;
+    transform: translateX(5%);
+}
+
+.event:hover .circle {
+    opacity: 1;
+    transform: translateX(-80%);
 }
 
 span.circle {
@@ -290,30 +291,21 @@ span.circle {
     border-radius: 50%;
     background-color: white;
     opacity: 0;
-    -webkit-transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
-    transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
     transform: translateX(80%);
 
-}
-
-.event::after {
-    height: 50px;
-    width: 100%;
-    border-radius: var(--rounded);
-}
-
-.event:hover {
-    cursor: default !important;
-    opacity: 1;
-    transform: translateX(5%);
+    -webkit-transition: var(--transition-slow);
+    transition: var(--transition-slow);
 }
 
 .name {
     width: 80%;
 }
 
-.time {
-    font-size: .7em;
+.date {
+    font-size: .5em;
+    width: fit-content;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .login-placeholder {
@@ -362,57 +354,6 @@ span.circle {
     gap: var(--gutter-m);
 }
 
-.tile-container {
-    display: flex;
-    gap: var(--gutter-l);
-    padding: var(--gutter-m);
-    width: 100%;
-    overflow: scroll;
-
-}
-
-.tile {
-    background-color: rgb(255, 255, 255);
-    width: 400px;
-    min-width: 400px;
-    height: 400px;
-    border-radius: var(--rounded);
-    box-shadow: var(--shadow);
-    position: relative;
-}
-
-.tile-overlap {
-    opacity: 1;
-    width: 100%;
-    height: 50px;
-    opacity: 0;
-    border-radius: inherit;
-    transition: all 300ms ease;
-    transform: translate(-5);
-}
-
-.tile:hover .tile-overlap {
-    opacity: 1;
-    animation-name: spin;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
-}
-
-@keyframes spin {
-    0% {
-        transform: rotateZ(0deg);
-    }
-
-    50% {
-        transform: rotateZ(360deg);
-        border-radius: 60%;
-    }
-
-    100% {
-        transform: rotateZ(720deg);
-    }
-}
-
 #canvas {
     background-color: rgb(255, 255, 255);
     width: 400px;
@@ -441,7 +382,6 @@ span.circle {
     padding: var(--gutter-m);
     border-bottom: 0px;
     background-color: rgb(5, 5, 5);
-    box-shadow: var(--shadow);
     display: flex;
     border-top: 2px solid rgb(195, 195, 195);
     gap: var(--gutter-s);
@@ -449,6 +389,27 @@ span.circle {
 
 .pop-up-container h1 {
     color: white;
+}
+
+.pop-up-header {
+    display: flex;
+    gap: var(--gutter-s);
+    align-items: center;
+    position: sticky;
+    top: 0;
+    background-color: black;
+    padding: var(--gutter-s);
+    padding-left: 0px;
+}
+
+.tag {
+    border-radius: var(--rounded);
+    background-color: #272727;
+    display: flex;
+    align-items: center;
+    padding: var(--gutter-s);
+    font-size: .8em;
+    color: rgb(242, 242, 242);
 }
 
 #map {
@@ -500,16 +461,10 @@ span.cross-line {
     width: 100%;
     height: 100%;
     padding: var(--gutter-m);
+    padding-top: 0px;
     background-color: rgb(0, 0, 0);
-    border-bottom: 2px solid rgb(255, 255, 255);
-    gap: var(--gutter-s);
-}
-
-h3 {
-    color: white;
-    font-size: 1.4em;
-    font-weight: 500;
-    letter-spacing: 1px;
+    gap: var(--gutter-m);
+    overflow-y: auto;
 }
 
 p {
@@ -523,15 +478,125 @@ p {
     color: white;
     width: fit-content;
     height: fit-content;
-    padding: var(--gutter-s);
-    border: 2px solid white;
-    border-bottom: 3px solid white;
-    border-radius: var(--rounded);
     overflow: hidden;
     white-space: nowrap;
     z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: var(--gutter-s);
 }
 
 .sign-up-button:hover {
     opacity: 0.7;
+}
+
+#information {
+    height: fit-content;
+    width: 100%;
+    display: flex;
+    gap: var(--gutter-m);
+    flex-direction: column;
+}
+
+.tile-container {
+    height: fit-content;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    max-height: 500px;
+    overflow: auto;
+    gap: var(--gutter-m);
+    padding: var(--gutter-l);
+}
+
+.tile {
+    background-color: rgb(255, 255, 255);
+    width: 200px;
+    height: 200px;
+    border-radius: var(--rounded);
+    box-shadow: var(--shadow);
+    position: relative;
+    -webkit-transition: var(--transition-slow);
+    transition: var(--transition-slow);
+    display: flex;
+    flex-direction: column;
+}
+
+.tile::after {
+    content: "";
+    border-radius: 5px;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    opacity: 0;
+    -webkit-transition: var(--transition-slow);
+    transition: var(--transition-slow);
+}
+
+.tile:hover {
+    -webkit-transform: scale(1.1, 1.1);
+    transform: scale(1.1, 1.1);
+    z-index: 100;
+}
+
+.tile:active {
+    -webkit-transform: scale(1.2, 1.2);
+    transform: scale(1.2, 1.2);
+}
+
+.tile:hover::after {
+    opacity: 1;
+}
+
+.tile-overlap {
+    opacity: 1;
+    width: 100%;
+    opacity: 0;
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+    transform: translateY(-0%);
+    background-color: rgba(0, 0, 0, 0.792);
+    color: rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+    padding: var(--gutter-s);
+}
+
+.tile:hover .tile-overlap {
+    opacity: 1;
+    transform: translateY(0%);
+}
+
+.information-popup-backdrop {
+    background-color: rgba(0, 0, 0, 0.626);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    z-index: 10000;
+    top: 0px;
+    left: 0px;
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+}
+
+.information-popup-content {
+    box-shadow: var(--shadow);
+    border-radius: var(--rounded);
+    background-color: rgb(17, 17, 17);
+    height: 500px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
 }
