--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,6 @@
     --transition: transform 0.1s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
     --transition-slow: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
     --transition-med: transform .8s cubic-bezier(0.165, 0.84, 0.44, 1), opacity .2s cubic-bezier(0.165, 0.84, 0.44, 1);
-
 }
 
 body {
@@ -135,7 +134,6 @@ h2 {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     z-index: 1;
-    
 }
 
 h3 {
@@ -206,7 +204,6 @@ ul.nav-container li {
     justify-content: center;
     align-items: center;
     color: white;
-
 }
 
 ul.nav-container li:hover {
@@ -247,7 +244,6 @@ ul.nav-container li:hover {
     gap: var(--gutter-s);
 }
 
-
 .event {
     height: 50px;
     width: 500px;
@@ -256,13 +252,11 @@ ul.nav-container li:hover {
     color: #f3f3f3;
     gap: var(--gutter-s);
     opacity: 0.8;
-
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     padding: var(--gutter-s);
-
     -webkit-transition: var(--transition-slow);
     transition: var(--transition-slow);
 }
@@ -284,7 +278,6 @@ span.circle {
     background-color: white;
     opacity: 0;
     transform: translateX(80%);
-
     -webkit-transition: var(--transition-slow);
     transition: var(--transition-slow);
 }
@@ -306,28 +299,6 @@ span.circle {
     height: fit-content;
     gap: var(--gutter-s);
     color: black;
-
-}
-
-.login-container {
-    background-color: white;
-    width: fit-content;
-    height: fit-content;
-    padding: var(--gutter-m);
-    border-radius: var(--rounded);
-    display: flex;
-    justify-content: space-around;
-    gap: var(--gutter-m);
-    opacity: .7;
-    transition: all 300ms ease;
-    font-weight: 400;
-}
-
-.login-container:hover {
-    cursor: default;
-    opacity: 1;
-    border: none;
-    cursor: pointer !important;
 }
 
 .link {
@@ -496,21 +467,24 @@ p {
 #information {
     height: fit-content;
     width: 100%;
+
     display: flex;
-    gap: var(--gutter-m);
     flex-direction: column;
+    gap: var(--gutter-m);
 }
 
 .tile-container {
     height: fit-content;
     width: 100%;
+
     display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
+
     max-height: 500px;
     overflow: auto;
-    gap: var(--gutter-m);
+    gap: var(--gutter-l);
     padding: var(--gutter-l);
 }
 
@@ -529,17 +503,17 @@ p {
 
 .tile::after {
     content: "";
-    border-radius: 5px;
     position: absolute;
     z-index: -1;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    border-radius: 5px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    opacity: 0;
     -webkit-transition: var(--transition-slow);
     transition: var(--transition-slow);
+    opacity: 0;
 }
 
 .tile:hover {
@@ -549,31 +523,12 @@ p {
 }
 
 .tile:active {
-    -webkit-transform: scale(1.2, 1.2);
-    transform: scale(1.2, 1.2);
+    -webkit-transform: scale(1.15, 1.15);
+    transform: scale(1.15, 1.15);
 }
 
 .tile:hover::after {
     opacity: 1;
-}
-
-.tile-overlap {
-    opacity: 1;
-    width: 100%;
-    opacity: 0;
-    border-top-left-radius: inherit;
-    border-top-right-radius: inherit;
-    transform: translateY(-0%);
-    background-color: rgba(0, 0, 0, 0.792);
-    color: rgb(255, 255, 255);
-    display: flex;
-    align-items: center;
-    padding: var(--gutter-s);
-}
-
-.tile:hover .tile-overlap {
-    opacity: 1;
-    transform: translateY(0%);
 }
 
 .information-popup-backdrop {
@@ -601,4 +556,37 @@ p {
     width: 500px;
     display: flex;
     flex-direction: column;
+}
+
+.login-container {
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    gap: var(--gutter-s);
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    margin: var(--gutter-l);
+    z-index: 100;
+    justify-content: center;
+    align-items: center;
+}
+
+button.login {
+    background-color: white;
+    width: fit-content;
+    height: fit-content;
+    padding: var(--gutter-m);
+    border-radius: 12px;
+    display: flex;
+    gap: var(--gutter-m);
+    opacity: 0.7;
+    font-weight: 500;
+    transition: var(--transition);
+}
+
+button.login:hover {
+    opacity: 1;
+    cursor: pointer;
 }
