--- a/login/styles_reg.css
+++ b/login/styles_reg.css
@@ -197,3 +197,8 @@ input:-webkit-autofill {
 -webkit-box-shadow: 0 0 0px 1000px black inset !important;
 -webkit-text-fill-color: white !important;
 }
+
+#text-box-input {
+  height: 30px;
+  width: 250px
+}
