--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ h1 {
     width: fit-content;
     height: fit-content;
     background: rgb(133, 12, 255);
-    background: linear-gradient(225deg, rgb(227, 199, 255) 0%, rgb(67, 50, 255) 100%);
+    background: linear-gradient(225deg, #5464f3 30%, #7581f0 70%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
@@ -170,12 +170,13 @@ div.nav-placeholder {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(0, 0, 0);
+    background: rgb(4, 0, 93);
+    background: linear-gradient(117deg, #5464f3 0%, #5464f3 100%);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     padding: var(--gutter-s);
     position: sticky;
     z-index: 1000;
-    background: rgb(0, 0, 0);
-    border-bottom: 1px solid white;
 
     top: 0px;
     right: 0px;
@@ -193,7 +194,7 @@ ul.nav-container li {
     padding: var(--gutter-s);
     border-radius: 20px;
     position: relative;
-    font-weight: 700;
+    font-weight: 600;
     font-size: 1em;
     color: rgb(221, 221, 221);
     letter-spacing: 2px !important;
@@ -240,7 +241,8 @@ ul.nav-container li:hover {
     flex-direction: column;
     gap: var(--gutter-s);
 }
-.event-container:hover{
+
+.event-container:hover {
     cursor: default;
 }
 
@@ -293,7 +295,7 @@ span.circle {
     white-space: nowrap;
 }
 
-.login-placeholder {
+.login- {
     display: flex;
     flex-direction: column;
     height: fit-content;
@@ -462,7 +464,7 @@ p {
     align-items: center;
     justify-content: center;
     gap: var(--gutter-s);
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .sign-up-button:hover {
@@ -583,7 +585,7 @@ button.login {
     width: fit-content;
     height: fit-content;
     padding: var(--gutter-m);
-    border-radius: 12px;
+    border-radius: 7px;
     display: flex;
     gap: var(--gutter-m);
     opacity: 0.7;
@@ -733,5 +735,17 @@ select:hover {
     border-bottom: 1px solid black;
     border-top-left-radius: var(--rounded);
     border-top-right-radius: var(--rounded);
-z-index: 100;
+    z-index: 100
+}
+
+.tile-content-container {
+    padding: var(--gutter-s);
+    font-weight: 600;
+    font-size: 3em;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
