--- a/styles.css
+++ b/styles.css
@@ -486,14 +486,18 @@ p {
     align-items: center;
     max-height: 500px;
     overflow: auto;
-    gap: var(--gutter-l);
+    gap: 40px;
     padding: var(--gutter-l);
+}
+
+.tile-container *{
+    font-size: .9em;
 }
 
 .tile {
     background-color: rgb(220, 220, 220);
     width: fit-content;
-    height: 250px;
+    height: 200px;
     border-radius: var(--rounded);
     box-shadow: var(--shadow);
     position: relative;
