--- a/login/stijles.css
+++ b/login/stijles.css
@@ -158,7 +158,7 @@ input::placeholder {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: transparent;
+    background: linear-gradient(45deg, rgb(39, 46, 115) 27%, rgb(0, 154, 146) 77%);
 }
 
 button{
